<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsteroidShooting</string>
    <string name="title">AsteroidShooting</string>
    <string name="begin">Start</string>
    <string name="opts">Options</string>
    <string name="quit">Exit</string>
    <string name="controls">Controls</string>
    <string name="howtoplay">How to play</string>
    <string name="highscore">High score</string>
    <string name="highscoredisplay">High Score:</string>
    <string name="highscorenone">No high score available yet</string>
    <string name="credits">Credits</string>
    <string name="touchscreen">Touch Screen</string>
    <string name="keyboard">Keyboard</string>
    <string name="controlsforkeyboard">Controls for keyboard</string>
    <string name="left">Left:</string>
    <string name="right">Right:</string>
    <string name="fire">Fire:</string>
    <string name="change">Change</string>
    <string name="description">The objective of the game is to shoot as many asteroids as you can without losing three ships. If you are using touchscreen controls, the red button is for firing, and the joystick is for turnning and thrusting around. If you are using the keyboard you can set your controls, the defaults are A turn left, D turn right, W thrust forward, S thrust backward, and Space for fire. The points per asteroid vary on size:</string>
    <string name="onepoint">1 Point</string>
    <string name="twopoint">2 Points</string>
    <string name="threepoint">3 Points</string>
    <string name="up">Up:</string>
    <string name="down">Down:</string>
    <string name="creditsstring">Thanks to Jasper den Ouden for the Asteroid image.\nThanks to Dravenx for the Space ship image.\nThanks to Marvin for the shooting sound.\nThe font used in game is GNU Free Mono licensed under GPLv3 available at http://gnu.org/licenses/gpl.html\nAuthor: Joshua Bowren.</string>
	<string name="newkey">New key</string>
	<string name="presskey">Press a key: </string>
	<string name="postive">OK</string>
	<string name="negative">Cancel</string>
	<string name="version">Version 1.51</string>
	
	<!-- In game strings -->
	
	<string name="initialscore">SCORE 0</string>
	<string name="initiallevel">LEVEL 1</string>
	<string name="score">SCORE </string>
	<string name="level">LEVEL </string>
	<string name="high">HIGH </string>
	<string name="wait">WAITING FOR ASTEROIDS TO CLEAR</string>
	<string name="gameover">GAME OVER</string>
	
	<!-- Error strings -->
	
	<string name="keyboarderror">Keyboard preference error</string>
    
</resources>