<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/tabhost"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TabWidget android:id="@android:id/tabs"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
    />
    <FrameLayout android:id="@android:id/tabcontent"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
      
       <ScrollView android:id="@+id/tab1"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent">
           <LinearLayout android:id="@+id/linearlayout1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
	           <RadioGroup android:id="@+id/radiogroup1"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content">
	               <RadioButton android:id="@+id/rbtouchscreen"
	                   android:text="@string/touchscreen"
	                   android:layout_width="wrap_content"
	                   android:layout_height="wrap_content"
	                   android:checked="true">
	               </RadioButton>
	               <RadioButton android:id="@+id/rbkeyboard"
	                   android:text="@string/keyboard"
	                   android:layout_width="wrap_content"
	                   android:layout_height="wrap_content">
	               </RadioButton>
	           </RadioGroup>
	           <TextView android:id="@+id/textkeycontrols"
	               android:text="@string/controlsforkeyboard"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="24sp">
	           </TextView>
	           <TextView android:id="@+id/textup"
	               android:text="@string/up"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="18sp">
	           </TextView>
	           <Button android:id="@+id/buttonup"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/change">
	           </Button>
	           <TextView android:id="@+id/textdown"
	               android:text="@string/down"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="18sp">
	           </TextView>
	           <Button android:id="@+id/buttondown"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/change">
	           </Button>
	           <TextView android:id="@+id/textleft"
	               android:text="@string/left"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="18sp">
	           </TextView>
	           <Button android:id="@+id/buttonleft"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/change">
	           </Button>
	           <TextView android:id="@+id/textright"
	               android:text="@string/right"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="18sp">
	           </TextView>
	           <Button android:id="@+id/buttonright"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/change">
	           </Button>
	           <TextView android:id="@+id/textfire"
	               android:text="@string/fire"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="18sp">
	           </TextView>
	           <Button android:id="@+id/buttonfire"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/change">
	           </Button>
           </LinearLayout>
       </ScrollView>

      <ScrollView
          android:id="@+id/tab2"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent" >

          <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content" >
		
		
		          <TextView
		              android:id="@+id/textView1"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:text="@string/description"
		              android:textAppearance="?android:attr/textAppearanceLarge"
		              android:textSize="18sp" />
		
		          <ImageView
		              android:id="@+id/imageView1"
		              android:layout_width="100dp"
		              android:layout_height="100dp"
		              android:layout_alignParentLeft="true"
		              android:layout_below="@+id/textView1"
		              android:scaleType="fitXY"
		              android:src="@drawable/asteroid1"
		              android:contentDescription="@string/description" />
		
		          <ImageView
		              android:id="@+id/imageView2"
		              android:layout_width="75dp"
		              android:layout_height="75dp"
		              android:layout_alignParentLeft="true"
		              android:layout_below="@+id/imageView1"
		              android:scaleType="fitXY"
		              android:src="@drawable/asteroid1"
		              android:contentDescription="@string/description" />
		
		          <ImageView
		              android:id="@+id/imageView3"
		              android:layout_width="50dp"
		              android:layout_height="50dp"
		              android:layout_alignParentLeft="true"
		              android:layout_below="@+id/imageView2"
		              android:scaleType="fitXY"
		              android:src="@drawable/asteroid1"
		              android:contentDescription="@string/description" />
		
		          <TextView
		              android:id="@+id/textView2"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_alignBottom="@+id/imageView1"
		              android:layout_marginBottom="33dp"
		              android:layout_toRightOf="@+id/imageView1"
		              android:text="@string/onepoint"
		              android:textAppearance="?android:attr/textAppearanceLarge" />
		
		          <TextView
		              android:id="@+id/textView3"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_alignBottom="@+id/imageView2"
		              android:layout_marginBottom="22dp"
		              android:layout_toRightOf="@+id/imageView2"
		              android:text="@string/twopoint"
		              android:textAppearance="?android:attr/textAppearanceLarge" />
		
		          <TextView
		              android:id="@+id/textView4"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_alignTop="@+id/imageView3"
		              android:layout_toRightOf="@+id/imageView3"
		              android:text="@string/threepoint"
		              android:textAppearance="?android:attr/textAppearanceLarge" />
		
		</RelativeLayout>

      </ScrollView>

      <FrameLayout 
          android:id="@+id/tab3"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent">
	     <TextView
	         android:id="@+id/highscore"
	         android:layout_width="fill_parent"
	         android:layout_height="fill_parent"
	         android:gravity="center"
	         android:textSize="50sp"
	         android:textColor="@color/green" >
	     </TextView>
      </FrameLayout>
	  <ScrollView
          android:id="@+id/tab4"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent" >
      <TextView
          android:id="@+id/textViewCredits"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/creditsstring"
          android:textAppearance="?android:attr/textAppearanceLarge" />
	  </ScrollView>
    </FrameLayout>
  </LinearLayout>
</TabHost>